# SDL3_Playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SDL3_Playground.sln  imgui.ini  vcpkg-configuration.json  vcpkg.json
SDL3_Playground/: App.cpp  App.cppm  App.h  AssetLoader.cpp  AssetLoader.h  Mesh.h  SDL3_Playground.vcxproj  SDL3_Playground.vcxproj.filters  Type.cppm  Utility.cppm  WindowManager.cpp  WindowManager.cppm  _App.cpp  main.cpp
Shaders/: Default.frag.hlsl  Default.vert.hlsl  shadercross.bat  shadercross_spriv.bat
Shaders/Compiled/: Default.frag.dxil  Default.frag.spv  Default.vert.dxil  Default.vert.spv
TestAssets/: Heart_LowPolygon.fbx  Heart_LowPolygon.mtl  TestMesh.gltf
